Добавлен метод получения заявки по отправителю и получателю; проведен рефакторинг